CMS7-8376: pixel fixing  - remove explicit width from tree in hippo-picker, IE set's it through JS and moz+chrome can do width: max-content  - use width:max-content for moz+chrome to handle the scrollbars+parent width instead of falling back to JS for width calculations which is O(N).  - fixed position of tree elements  - removed invisible space at bottom  - simplified scrollbar detection for calculation of context icon position  - added redraw to contextMenu  - call contextMenu.redraw on tree scroll to keep context menu in sync when scrolling sideways  - reverted back to mouseover/mouseout for the context icon; layout shows less flicker and/or unwanted hiding of icon  - fix width for selection widget on long names

--- a/cms/api/src/main/resources/skin/screen.css
+++ b/cms/api/src/main/resources/skin/screen.css
@@ -1155,10 +1155,6 @@ table.hippo-window-form {
   border-right: 1px solid #afafaf;
 }
 
-.hippo-picker-tree .hippo-tree {
-  width: 193px;
-}
-
 .hippo-picker-list-details {
   height: 331px;
   margin-left: 0;
